Imported from https://mgr1ff1ths@github.com/mgr1ff1ths/mg-skt.git

--- a/project.config
+++ b/project.config
@@ -1,4 +1,21 @@
 [access]
 	inheritFrom = All-Projects
 [submit]
-	action = inherit
+[access "refs/*"]
+	owner = group user/Mark Griffiths (mgr1ff1ths)
+[access "refs/for/refs/*"]
+	label-Code-Review = -2..+2 group user/Mark Griffiths (mgr1ff1ths)
+	label-Verified = -1..+1 group user/Mark Griffiths (mgr1ff1ths)
+	push = group user/Mark Griffiths (mgr1ff1ths)
+	read = group user/Mark Griffiths (mgr1ff1ths)
+	rebase = group user/Mark Griffiths (mgr1ff1ths)
+	removeReviewer = group user/Mark Griffiths (mgr1ff1ths)
+	submit = group user/Mark Griffiths (mgr1ff1ths)
+[access "refs/heads/*"]
+	create = group user/Mark Griffiths (mgr1ff1ths)
+	push = +force group user/Mark Griffiths (mgr1ff1ths)
+	pushMerge = group user/Mark Griffiths (mgr1ff1ths)
+	read = group user/Mark Griffiths (mgr1ff1ths)
+[access "refs/tags/*"]
+	push = group user/Mark Griffiths (mgr1ff1ths)
+	push = +force group user/Mark Griffiths (mgr1ff1ths)
